big commit: use es smart code plugin to tokenize, use new index and new search method
