# docs/swagger.json
@@ -123,8 +123,11 @@
                 "summary": "模糊查询代码",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "name": "codeType",
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "name": "codeTypes",
                         "in": "query"
                     },
                     {
